# nytimes-tooling

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/windows/: ask_frontpage.bat  download.bat  pdf_to_markdown.bat
src/nytimes_parser/: download.py
src/nytimes_tooling/: __init__.py  _cli.py  ask.py  convert.py  download.py
