[project]
name = "nytimes-parser"
version = "0.1.0"
description = "Download, parse, and query New York Times front page PDFs using a local Ollama model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pymupdf>=1.27",
]

[project.scripts]
download-frontpages = "nytimes_parser.download:main"
pdf-to-markdown = "nytimes_parser.convert:main"
ask-frontpage = "nytimes_parser.ask:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nytimes_parser"]
